Fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,7 @@
-header {
-    margin: 1rem;
-}
-
 h1 {
     font-size: 2rem;
 }
 
-h2 {
-    font-size: 0.7rem;
+a {
     margin: 1rem;
 }
-
